syntax = "proto3";

package auth;
option go_package = "github.com/ariefzainuri96/go-api-ecommerce-auth-service/proto;authpb";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
}

message RegisterResponse {
  int64 user_id = 1; // Return the new ID
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 id = 1; // Return the JWT
  string token = 2; // Return the JWT
  string name = 3; // Return the JWT
  string email = 4; // Return the JWT
}